Adding Some more Check boxes in html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
                 <input type="radio" id="light3-off" name="light3-state" value="LOW" disabled>
                 <label for="light3-off">OFF</label>
             </div>
+            <div class="light-control">
+                <input type="checkbox" id="light4" name="light4">
+                <label for="light4">Light 4</label>
+                <input type="radio" id="light4-on" name="light4-state" value="HIGH" disabled>
+                <label for="light4-on">ON</label>
+                <input type="radio" id="light4-off" name="light4-state" value="LOW" disabled>
+                <label for="light4-off">OFF</label>
+            </div>
+            <div class="light-control">
+                <input type="checkbox" id="light5" name="light5">
+                <label for="light5">Light 5</label>
+                <input type="radio" id="light5-on" name="light5-state" value="HIGH" disabled>
+                <label for="light5-on">ON</label>
+                <input type="radio" id="light5-off" name="light5-state" value="LOW" disabled>
+                <label for="light5-off">OFF</label>
+            </div>
             <button type="button" id="send-signal">SEND SIGNAL</button>
         </form>
     </div>
