--- a/Listing data/index.html
+++ b/Listing data/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Automation Data</title>
+    <title>Home Automation Light Switches Data</title>
     <style>
         * {
             margin: 0;
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-    <h1>Home Automation Data</h1>
+    <h1>Home Automation Light Switches Data</h1>
     <div class="data-container" id="data-container"></div>
 
     <script type="module" src="script.js"></script>
